--- a/scss/base/_background.scss
+++ b/scss/base/_background.scss
@@ -14,18 +14,30 @@
     margin-bottom:20px;
 }
 
-
-
-// .intro{ 
-//     @extend %margin-menu;
-// }
-
-
-
-
 #contact{
+    @extend %center;
+    @include media(large){
+        width:100%;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        border-bottom:4px solid $aqua_blue;
+    };
+    @include media(x-large){
+        width:100%;
+        padding-bottom: 20px;
+        border-bottom:4px solid $aqua_blue;
+    };
+}
+
+.icons{
+    @include media(large){
+        height:100vw;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    };
     @include media(x-large){
         height:100vw;
         padding-top: 20px;
-    }
+        padding-bottom: 20px;
+    };
 }
